# cpp-engine

./: CMakeLists.txt  cppengine.h  library.h  main.cpp  test.cpp
examples/collision/: Components.h  DrawCircleSystem.cpp  DrawCircleSystem.h  LogPlayerInputSystem.h  MovementInputSystem.cpp  MovementInputSystem.h  MovementSystem.h  PlayerRef.h  SpawnCircleSystem.cpp  SpawnCircleSystem.h  Systems.h  WindowSystem.cpp  WindowSystem.h  main.cpp
examples/collision/components/: Circle.cpp  Circle.h  Input.cpp  Input.h  MovementInput.cpp  MovementInput.h  Player.cpp  Player.h  PlayerRef.cpp  PlayerRef.h  Position.cpp  Position.h  Speed.cpp  Speed.h
examples/collision/systems/: AIMovementInputSystem.cpp  AIMovementInputSystem.h  CreatePlayerSystem.cpp  CreatePlayerSystem.h  DrawCircleSystem.cpp  DrawCircleSystem.h  LogPlayerInputSystem.cpp  LogPlayerInputSystem.h  MovementInputSystem.h  MovementSystem.cpp  MovementSystem.h  OutOfBoundsSystem.cpp  OutOfBoundsSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerMovementInputSystem.cpp  PlayerMovementInputSystem.h  SpawnCircleSystem.cpp  SpawnCircleSystem.h  WindowSystem.cpp  WindowSystem.h
src/: Application.cpp  Application.h  System.cpp  System.h  cppengine.cpp  cppengine.h
tests/: Test_Application.cpp
